Fix initial check from checking for blank string to empty instead to pass null check